(item-preview) Add overflow: auto to fix scrolling of tall items

--- a/client/src/elements/item-preview/item-preview.css
+++ b/client/src/elements/item-preview/item-preview.css
@@ -4,7 +4,10 @@ item-preview {
   --q-preview-settings-margin-bottom: calc(var(--q-space-base) * 2);
   display: block;
   position: relative;
-  min-height: calc(var(--q-preview-min-height) + (2 * var(--q-preview-padding)) + 50px + var(--q-preview-settings-margin-bottom));
+  min-height: calc(
+    var(--q-preview-min-height) + (2 * var(--q-preview-padding)) + 50px +
+      var(--q-preview-settings-margin-bottom)
+  );
 }
 
 .item-preview__holder {
@@ -33,6 +36,7 @@ item-preview {
 .item-preview__container {
   display: flex;
   height: 100%;
+  overflow: auto;
 }
 
 .item-preview__notification {
